feat: add admin and finance wallet management endpoints
- Create AdminWalletController with comprehensive admin routes
- Add ManualAdjustmentRequest DTO for manual credit/debit
- Implement AdminWalletService with wallet management, manual adjustments,
  transaction viewing, disbursement approval, and reporting features
- Update SecurityConfig to secure /admin/** endpoints for ADMIN, FINANCE,
  and OPERATIONS roles
- Add proper role-based authorization using @PreAuthorize

This enhances administrative capabilities for wallet oversight,
financial operations, and system reporting.